--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="image-container position-relative">
             <div id = "backward" class="backward position-absolute"><i class="fa-solid fa-circle-chevron-left"></i></div>
             <div id = "forward" class="position-absolute"><i class="fa-solid fa-circle-chevron-right"></i></div>
+            <div id = "description" class="position-absolute"></div>
         </div>
         <script src="assets/js/script.js"></script> <!-- Collegamento con il JS -->
     </body>
