HTML & CSS | + Preview box

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     </head>
     <body>
         <h1 style="text-align:center;">Carosello con Array Object</h1>
-        <div class="image-container position-relative">
-            <div id = "backward" class="backward position-absolute"><i class="fa-solid fa-circle-chevron-left"></i></div>
-            <div id = "forward" class="position-absolute"><i class="fa-solid fa-circle-chevron-right"></i></div>
-            <div id = "description" class="position-absolute"></div>
+        <div class="container d-flex">
+            <div class="image-container position-relative">
+                <div id = "backward" class="backward position-absolute"><i class="fa-solid fa-circle-chevron-left"></i></div>
+                <div id = "forward" class="position-absolute"><i class="fa-solid fa-circle-chevron-right"></i></div>
+                <div id = "description" class="position-absolute"></div>
+            </div>
+            <div id="preview"></div>
         </div>
+        
         <script src="assets/js/script.js"></script> <!-- Collegamento con il JS -->
     </body>
 </html>
