--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
                 <div id = "forward" class="position-absolute"><i class="fa-solid fa-circle-chevron-right"></i></div>
                 <div id = "description" class="position-absolute"></div>
             </div>
-            <div id="preview"></div>
+            <div id="preview">
+                <img src="assets/img/01.webp" alt="img1">
+                <img src="assets/img/02.webp" alt="img1">
+                <img src="assets/img/03.webp" alt="img1">
+                <img src="assets/img/04.webp" alt="img1">
+                <img src="assets/img/05.webp" alt="img1">
+            </div>
         </div>
         
         <script src="assets/js/script.js"></script> <!-- Collegamento con il JS -->
