--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <h1 style="text-align:center;">Carosello con Array Object</h1>
+        <h1 style="text-align:center; color:white;">Carosello con Array Object</h1>
         <div class="container d-flex">
             <div class="image-container position-relative">
                 <div id = "backward" class="backward position-absolute"><i class="fa-solid fa-circle-chevron-left"></i></div>
