--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div style="text-align: center;">
-            <img src="assets/img/logo.png" alt="Logo" id="logo">
+            <a href="https://www.harley-davidson.com" target="_blank"><img src="assets/img/logo.png" alt="Logo" id="logo"></a>
         </div>
         <!-- <h1 style="text-align:center; color:white;">Carosello con Array Object</h1> -->
         <div class="container d-flex">
